added Dark Mode/not complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <button type="button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
     <header>
       <h1>Password Generator</h1>
     </header>
@@ -58,5 +59,7 @@
     </div>
   </div>
   <script src="./assets/javascript/script.js"></script>
+  <script src="./assets/javascript/darkMode.js"></script>
+
 </body>
 </html>
