--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="wrapper">
-    <button type="button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    <button type="button" onclick="toggleDarkMode()">
+      <label id="darkModeLabel">Dark Mode: Off</label>
+    </button>
     <header>
       <h1>Password Generator</h1>
     </header>
@@ -59,7 +61,6 @@
     </div>
   </div>
   <script src="./assets/javascript/script.js"></script>
-  <script src="./assets/javascript/darkMode.js"></script>
-
+  <!-- <script src="./assets/javascript/darkMode.js"></script> -->
 </body>
 </html>
