--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +8,7 @@
   <title>Password Generator</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
   <div class="wrapper">
     <button type="button" onclick="toggleDarkMode()">
@@ -17,43 +19,39 @@
     </header>
     <div class="card">
       <div class="card-body">
-        <textarea
-          readonly
-          id="password"
-          placeholder="*Password will display here*"
-          aria-label="Generated Password"
-        ></textarea>
+        <textarea readonly id="password" placeholder="*Password will display here*"
+          aria-label="Generated Password"></textarea>
       </div>
       <div class="card-footer">
         <br>
         <form id="passwordForm">
           <label for="passwordLength">Password Length (8-128): </label>
           <input type="number" id="passwordLength" name="passwordLength" min="8" max="128" required />
-          <br /><br> <!-- Add a line break for spacing -->
+          <br /><br>
 
           <div>
             <input type="checkbox" id="uppercase" name="uppercase" />
             <label for="uppercase">Include Uppercase letters</label>
           </div>
-          <br /> <!-- Add a line break for spacing -->
+          <br />
 
           <div>
             <input type="checkbox" id="lowercase" name="lowercase" />
             <label for="lowercase">Include Lowercase letters</label>
           </div>
-          <br /> <!-- Add a line break for spacing -->
+          <br />
 
           <div>
             <input type="checkbox" id="numbers" name="numbers" />
             <label for="numbers">Include Numbers</label>
           </div>
-          <br /> <!-- Add a line break for spacing -->
+          <br />
 
           <div>
             <input type="checkbox" id="specialCharacters" name="specialCharacters" />
             <label for="specialCharacters">Include Special characters</label>
           </div>
-          <br /> <!-- Add a line break for spacing -->
+          <br />
 
           <button type="button" id="generate" class="btn">Generate Password</button>
         </form>
@@ -61,6 +59,8 @@
     </div>
   </div>
   <script src="./assets/javascript/script.js"></script>
-  <!-- <script src="./assets/javascript/darkMode.js"></script> -->
+  
 </body>
+
 </html>
+
